stuff to make the draw function work and print the texture of the image without calling the texture variable

--- a/RaylibStarter2/Project2D/Project2D.csproj
+++ b/RaylibStarter2/Project2D/Project2D.csproj
@@ -35,7 +35,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MathClasses">
+    <Reference Include="MathClasses, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\MathClasses.dll</HintPath>
     </Reference>
     <Reference Include="System" />
