--- a/RaylibStarter2/Project2D/Project2D.csproj
+++ b/RaylibStarter2/Project2D/Project2D.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CollisionManager.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Grid.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
