--- a/RaylibStarter2/Project2D/Project2D.csproj
+++ b/RaylibStarter2/Project2D/Project2D.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
+    <Compile Include="ScoreManager.cs" />
     <Compile Include="Tank.cs" />
     <Compile Include="TankEnemy.cs" />
     <Compile Include="Turret.cs" />
